--- a/app/src/main/res/layout/activity_todo_list.xml
+++ b/app/src/main/res/layout/activity_todo_list.xml
@@ -9,24 +9,24 @@
         android:id="@+id/todo_list_activity_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/todo_list_activity_header_profile_image"
             android:layout_width="50dip"
             android:layout_height="50dip"
-            android:layout_margin="@dimen/default_margin"/>
+            android:layout_margin="@dimen/default_margin" />
 
         <TextView
             android:id="@+id/todo_list_activity_header_profile_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"
+            android:layout_margin="@dimen/default_margin"
             android:gravity="center"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/default_title_size"
-            android:layout_margin="@dimen/default_margin"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -36,23 +36,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/todo_list_activity_relative_layout_bottom"
-        android:layout_below="@id/todo_list_activity_header"/>
+        android:layout_below="@id/todo_list_activity_header" />
 
     <RelativeLayout
         android:id="@+id/todo_list_activity_relative_layout_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_margin"
-        android:layout_above="@id/todo_list_activity_button_add">
+        android:layout_above="@id/todo_list_activity_button_add"
+        android:layout_margin="@dimen/default_margin">
+
+        <!-- IMAGE SELECTION -->
+        <ImageView
+            android:id="@+id/imageSelection"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_image_black_24dp" />
 
         <!-- EDIT TEXT  -->
         <EditText
             android:id="@+id/todo_list_activity_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/default_text_size"
+            android:layout_toLeftOf="@id/todo_list_activity_spinner"
+            android:layout_toEndOf="@+id/imageSelection"
             android:hint="@string/todolist_things_todo"
-            android:layout_toLeftOf="@id/todo_list_activity_spinner"/>
+            android:textSize="@dimen/default_text_size" />
 
         <!-- SPINNER  -->
         <Spinner
@@ -60,22 +68,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:textSize="@dimen/default_text_size"/>
+            android:textSize="@dimen/default_text_size" />
 
     </RelativeLayout>
 
     <!-- BUTTON TODOLIST -->
     <Button
         android:id="@+id/todo_list_activity_button_add"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/default_margin"
+        android:background="@drawable/button_radius_accent_color"
+        android:padding="@dimen/default_margin"
         android:text="@string/todolist_button_add"
         android:textColor="#fff"
-        android:textSize="@dimen/default_text_size"
-        android:background="@drawable/button_radius_accent_color"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_margin="@dimen/default_margin"
-        android:padding="@dimen/default_margin"
-        android:layout_alignParentBottom="true"/>
+        android:textSize="@dimen/default_text_size" />
 
 </RelativeLayout>
