--- a/app/src/main/res/layout/activity_todo_list_item.xml
+++ b/app/src/main/res/layout/activity_todo_list_item.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/activity_todo_list_item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_margin"/>
+        android:layout_margin="@dimen/default_margin" />
+
+    <ImageView
+        android:id="@+id/activity_todo_list_selected_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="@dimen/default_margin" />
 
     <TextView
         android:id="@+id/activity_todo_list_item_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="@dimen/default_margin"/>
+        android:layout_margin="@dimen/default_margin"
+        android:layout_weight="1" />
+
+    <ImageView
+        android:id="@+id/activity_todo_list_share_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dip"
+        android:src="@drawable/ic_share_black_24dp"/>
 
     <ImageButton
         android:id="@+id/activity_todo_list_item_remove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_delete_forever_black_24px"
-        android:layout_margin="@dimen/default_margin"/>
+        android:layout_margin="@dimen/default_margin"
+        android:background="@drawable/ic_delete_forever_black_24px" />
 
 </LinearLayout>
